fazendo uns ajustes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>História do Brasil</title>
@@ -44,7 +40,7 @@
 									
 									</ul>
 								
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="left-sidebar.html">Era Vargas e Ditadura</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							</ul>
 						</nav>
