--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="homepage is-preload">
@@ -17,12 +18,12 @@
 					<!-- Inner -->
 						<div class="inner" style="color: black;">
 							<header>
-								<h1><a href="index.html" id="logo" style="color: black;">BRASIL</a></h1>
+								<h1 style="color: black;">BRASIL</h1>
 								<hr />
 								<p>Um País de Revoluções</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Começar</a>
+								<a href="#banner" class="button circled scrolly" style="text-decoration: none;">Começar</a>
 							</footer>
 						</div>
 
@@ -50,167 +51,119 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're looking at <strong>Helios</strong>.</h2>
+						<h2>História do Brasil:<strong>Eras e eventos históricos</strong>.</h2>
 						<p>
-							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
-							Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
+							Explorando os momentos que marcaram nossa história.
 						</p>
 					</header>
 				</section>
 
-			<!-- Carousel -->
-				<section class="carousel">
-					<div class="reel">
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
+			
+				<div class="container">
+					<div class="row">
+					  <div class="col-sm">
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="./images/ima02.jpg" alt="Imagem de capa do card">
+							<div class="card-body">
+							  <p class="card-text">Nos primeiros anos, a economia era baseada na proteção do pau-brasil. Para organizar uma colônia, Portugal criou as capitanias hereditárias em 1534 e, mais tarde, o Governo-Geral, centralizando o poder.</p>
+							</div>
+						  </div>
+					  </div>
+					  <div class="col-sm">
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="./images/img03.jpg" alt="Imagem de capa do card">
+							<div class="card-body">
+							  <p class="card-text">A cana-de-açúcar se tornou a principal atividade econômica, exigindo grande quantidade de mão de obra. Isso levou à escravização de indígenas e à chegada de africanos trazidos à força para trabalhar nos engenhos.</p>
+							</div>
+						  </div>
+					  </div>
+					  <div class="col-sm">
+						<div class="card" style="width: 18rem;">
+							<img class="card-img-top" src="./images/img01.jpg" alt="Imagem de capa do card">
+							<div class="card-body">
+							  <p class="card-text">A colonização portuguesa trouxe costumes, pensando e a língua que se tornariam base da identidade brasileira. O contato com indígenas e africanos comprovado em uma cultura diversa, marcada por novas tradições, ritmos e crenças religiosas.</p>
+							</div>
+						  </div>
+					  </div>
 					</div>
-				</section>
+				  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 			<!-- Main -->
-				<div class="wrapper style2">
+				<div class="wrapper style2" style="margin-top: 50px;">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 						<header>
-							<h2><a href="#">Sed massa imperdiet magnis</a></h2>
+							<h2>A Chegada dos Portugueses ao Brasil</h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								A chegada dos portugueses marcou o início da presença europeia no Brasil, dando origem ao processo de colonização que mudou a história do país.
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							No dia 22 de abril de 1500 , uma expedição comandada por Pedro Álvares Cabral avistou o litoral brasileiro, marcando o que ficou conhecido como o descobrimento do Brasil . Esse evento fez parte do processo das Grandes Navegações , promovidas por Portugal ao longo do século XV.
+						</br></br>
+A frota era composta por 13 embarcações e cerca de 1200 homens . O primeiro ponto avistado foi na região do Monte Pascoal , na Bahia. Poucos dias depois, em 26 de abril , foi realizada a primeira missa no novo território. No entanto, a permanência dos portugueses foi breve: no dia 1º de maio , a expedição viagem para a Índia.
+</br>
+</br>
+O Brasil, inicialmente, foi chamado de Ilha de Vera Cruz , como registrado na carta de Pero Vaz de Caminha . Embora a presença portuguesa tenha sido limitada nos primeiros anos, a partir da década de 1530, medidas efetivas de colonização começaram a ser inovadoras, consolidando o domínio sobre a nova terra.
 						</p>
-						<footer>
-							<a href="#" class="button">Continue Reading</a>
-						</footer>
-					</article>
 
 				</div>
+
+				<div class="d-flex justify-content-center">
+					<img src="./images/img04.jpg" class="img-fluid" alt="Imagem responsiva">
+				</div>
+
+
 
 			<!-- Features -->
 				<div class="wrapper style1">
 
 					<section id="features" class="container special">
 						<header>
-							<h2>Morbi ullamcorper et varius leo lacus</h2>
-							<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+							<h2>A Colonização Portuguesa no Brasil</h2>
+							<p>Origens da Colonização Portuguesa e Seus Impactos na Sociedade Brasileira</p>
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+							<img src="./images/img05.jpeg" alt=""  class="image featured" >
 								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+									<h3>Primeiros Anos da Colonização</h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Nos primeiros 30 anos, a presença portuguesa no Brasil foi limitada, com poucos colonos fixados no território. O principal interesse era a exploração do pau-brasil, feita por meio do escambo com os indígenas. A partir de 1530, Portugal passou a organizar a colonização com as Capitanias Hereditárias, e, em 1549, criou o Governo-Geral para administrar a colônia diretamente.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<img src="./images/img06.webp" alt="" class="image featured">
 								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+									<h3>Economia e Exploração</h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									O Brasil foi colonizado sob os princípios do mercantilismo, funcionando como uma economia complementar à de Portugal. A plantation foi o modelo produtivo predominante, baseado na monocultura, no latifúndio e no trabalho escravo. Atividades como o cultivo da cana-de-açúcar, a mineração e, posteriormente, o café foram os pilares da economia colonial. A pecuária também teve um papel importante, ajudando na ocupação do interior.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<img src="./images/img07.jpg" alt=""  class="image featured">
 								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
+									<h3>Legado da Colonização</h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Além da exploração econômica e social, a colonização portuguesa deixou marcas profundas na identidade do Brasil. A língua portuguesa, a religião católica e diversas tradições culturais foram trazidas pelos colonizadores. No entanto, o modelo colonial também resultou em desigualdades que persistem até hoje, como a concentração de terras, a desigualdade racial e a violência estrutural.
 								</p>
 							</article>
 						</div>
