--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ O Brasil, inicialmente, foi chamado de Ilha de Vera Cruz , como registrado na ca
 									<h3>Primeiros Anos da Colonização</h3>
 								</header>
 								<p>
-									Nos primeiros 30 anos, a presença portuguesa no Brasil foi limitada, com poucos colonos fixados no território. O principal interesse era a exploração do pau-brasil, feita por meio do escambo com os indígenas. A partir de 1530, Portugal passou a organizar a colonização com as Capitanias Hereditárias, e, em 1549, criou o Governo-Geral para administrar a colônia diretamente.
+									Nos primeiros 30 anos, Portugal explorou o pau-brasil através do escambo com indígenas, sem colonização efetiva. A partir de 1530, implantou-se como Capitanias Hereditárias e, em 1549, criou o Governo-Geral para administrar a colônia.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
@@ -154,7 +154,7 @@ O Brasil, inicialmente, foi chamado de Ilha de Vera Cruz , como registrado na ca
 									<h3>Economia e Exploração</h3>
 								</header>
 								<p>
-									O Brasil foi colonizado sob os princípios do mercantilismo, funcionando como uma economia complementar à de Portugal. A plantation foi o modelo produtivo predominante, baseado na monocultura, no latifúndio e no trabalho escravo. Atividades como o cultivo da cana-de-açúcar, a mineração e, posteriormente, o café foram os pilares da economia colonial. A pecuária também teve um papel importante, ajudando na ocupação do interior.
+									O Brasil superou os princípios do mercantilismo , sendo uma economia complementar a Portugal. A plantação , baseada na monocultura, no latifúndio e no trabalho escravo, domina a produção, com destaque para a cana-de-açúcar, a mineração e o café . A pecuária ajudou na ocupação do interior.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
@@ -163,7 +163,7 @@ O Brasil, inicialmente, foi chamado de Ilha de Vera Cruz , como registrado na ca
 									<h3>Legado da Colonização</h3>
 								</header>
 								<p>
-									Além da exploração econômica e social, a colonização portuguesa deixou marcas profundas na identidade do Brasil. A língua portuguesa, a religião católica e diversas tradições culturais foram trazidas pelos colonizadores. No entanto, o modelo colonial também resultou em desigualdades que persistem até hoje, como a concentração de terras, a desigualdade racial e a violência estrutural.
+									A colonização portuguesa moldou a identidade do Brasil, trazendo a língua, a religião católica e tradições culturais . No entanto, também deixou o desigconcentração de terras, desigualdade racial e violência estrutural .
 								</p>
 							</article>
 						</div>
