--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									
 									</ul>
 								
-								<li><a href="left-sidebar.html">Era Vargas e Ditadura</a></li>
+								<li><a href="left-sidebar.html">Era Vargas</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							</ul>
 						</nav>
