--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header">
+			<!--	<div id="header"> -->
 
 					<!-- Inner -->
 						<div class="inner" style="color: black;">
